# claude-whereami

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude/: settings.example.json  settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/whereami/: SKILL.md
.github/workflows/: ci.yml
docs/: peek-hotkey.md
docs/superpowers/plans/: 2026-06-09-session-support-app.md  2026-06-10-whereami-token-diet.md  2026-06-10-whereami-v2.md
docs/superpowers/specs/: 2026-06-09-session-support-app-design.md  2026-06-09-whereami-v2-design.md  2026-06-10-whereami-token-diet-design.md
hooks/: hooks.json
scripts/: hook.py  install.py  statusline.py
src/whereami/: cache.py  drift.py  install.py  statusline.py  transcript.py
tests/: conftest.py  test_cache.py  test_drift.py  test_guard.py  test_install.py  test_statusline.py  test_transcript.py
