[project]
name = "whereami"
version = "0.2.0"
description = "In-session reorientation tool for Claude Code"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
whereami-statusline = "whereami.statusline:main"
whereami-hook = "whereami.drift:run_hook"
whereami-install = "whereami.install:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
